# jmap-chat-ui

./: Cargo.toml
audit/: status.md
crates/jmap-chat/: Cargo.toml
crates/jmap-chat-egui/: Cargo.toml
crates/jmap-chat-egui/src/: app.rs  client_task.rs  config.rs  event.rs  lib.rs  main.rs
crates/jmap-chat-egui/tests/: app_state_test.rs  config_test.rs
crates/jmap-chat/src/: auth.rs  blob.rs  client.rs  error.rs  jmap.rs  lib.rs  methods.rs  types.rs  utils.rs
crates/jmap-chat/src/methods/: blob.rs  chat.rs  contact.rs  custom_emoji.rs  message.rs  misc.rs  mod.rs  quota.rs  space.rs  space_ban.rs  space_invite.rs
crates/jmap-chat/src/ws/: mod.rs
crates/jmap-chat/tests/: batch_test.rs  blob_test.rs  fetch_session_test.rs  methods_test.rs  ws_test.rs
crates/jmap-chat/tests/fixtures/: README.md
crates/jmap-chat/tests/fixtures/blob/: blob_convert.json  upload_response.json
crates/jmap-chat/tests/fixtures/jmap/: batch_refplus.json  batch_request.json
crates/jmap-chat/tests/fixtures/methods/: batch_response.json  blob_lookup_response.json  chat_query_changes_response.json  chat_set_create_channel_response.json  chat_set_create_direct_response.json  chat_set_create_group_response.json  chat_set_destroy_response.json  chat_set_update_response.json  chat_typing_response.json  message_query_changes_response.json  message_set_destroy_response.json  message_set_rate_limited.json  message_set_update_response.json  quota_get.json  space_ban_changes_response.json
crates/jmap-chat/tests/fixtures/types/: chat_with_typing_fields.json  delivery_receipt_with_device.json  message_rich_body_invalid.json  message_rich_body_valid.json  presence_status_receipt_sharing.json
