[workspace]
members = [
    "crates/jmap-chat",
    "crates/jmap-chat-egui",
    "crates/jmap-chat-iced",
    "crates/jmap-chat-slint",
    "crates/jmap-chat-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls-manual-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
ulid = "1"

# dev
tokio-test = "0.4"
wiremock = "0.6"
