[package]
name = "jmap-chat-egui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "jmap_chat_egui"
path = "src/lib.rs"

[[bin]]
name = "jmap-chat-egui"
path = "src/main.rs"

[dependencies]
jmap-chat = { path = "../jmap-chat" }
tokio.workspace = true
futures.workspace = true
ulid.workspace = true
clap = { version = "4", features = ["derive"] }
eframe = "0.28"

[dev-dependencies]
serde_json.workspace = true
